# InClang-Beat_Plane

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  progress.md
assets/music/: CG.pcm
src/: config.h  main.c  main.h
src/driver/input_hw/: input_hw.c  input_hw.h
src/driver/input_hw/joystick/: joystick.c  joystick.h
src/driver/input_hw/key/: key.c  key.h
src/driver/lv_port/: lv_port.c  lv_port.h
src/driver/music/: bgm.c  bgm.h  cg.c  cg.h
src/driver/uart/: uart.c  uart.h
src/game/: game.c  game.h
src/game/core/event/: event.c  event.h
src/game/core/fsm/: fsm.c  fsm.h
src/game/core/game_object/: game_object.c  game_object.h
src/game/core/input_sw/: input_sw.c  input_sw.h
src/game/core/pool/: pool.c  pool.h
src/game/core/timer/: timer.c  timer.h
src/game/level/: level.c  level.h
src/tool/: tools.c  tools.h
src/tool/debug/: debug.c  debug.h
src/tool/lvgl_utils/: lvgl_utils.c  lvgl_utils.h
src/tool/pref_monitor/: perf_monitor.c  perf_monitor.h
src/ui/: ui.c  ui.h
src/ui/ui_key/: ui_key.c  ui_key.h
src/ui/ui_menu/: ui_menu.c  ui_menu.h
src/ui/ui_play/: ui_play.c  ui_play.h
src/ui/ui_sys_halt/: ui_sys_halt.c  ui_sys_halt.h
src/ui/ui_templates/: ui_templates.c  ui_templates.h
